@startuml GameStatesManager

enum GameplayPhases {
  BuildPhase
  RunPhase
}

enum GameStates {
  GameStarted
  LevelLoaded
  GameRunning
  GamePaused
  LevelFinished
}

enum MenuStates {
  PauseMenu
  MainMenu
  LeaderboardMenu
  SettingsMenu
  LevelSelectMenu
}

class GameStatesManager {
  - {static} currentGameplayPhase : GameplayPhases
  - {static} currentGameState : GameStates
  - {static} currentMenuState : MenuStates
  + GameplayPhaseChanged : UnityEvent<GameplayPhases>
  + GameStateChanged : UnityEvent<GameStates>
  + MenuStateChanged : UnityEvent<MenuStates>
  
  + {static} SetCurrentGameplayPhase(GameplayPhases) : void
  + {static} GetCurrentGameplayPhase() : GameplayPhases
  + {static} SetCurrentGameState(GameStates) : void
  + {static} GetCurrentGameState() : GameStates
  + {static} SetCurrentMenuState(MenuStates) : void
  + {static} GetCurrentMenuState() : MenuStates
}

GameStatesManager --> GameplayPhases : has
GameStatesManager --> GameStates : has
GameStatesManager --> MenuStates : has

@enduml
